# filewatcher

./: .gitignore  Cargo.toml  README.md
data/: README.md  file.txt
src/: lib.rs  main.rs
src/parse/: mod.rs
src/paths/: mod.rs
src/watcher/: mod.rs
tests/: README.md  test_changes.rs  test_reading.rs
